--- a/Mvvn/src/main/res/values/strings.xml
+++ b/Mvvn/src/main/res/values/strings.xml
@@ -1,15 +1,16 @@
 <resources>
 
-    <string name="app_updater_start_notification_title">版本更新</string>
-    <string name="app_updater_start_notification_content">正在获取下载数据…</string>
+    <string name="app_updater_start_notification_title">version update</string>
+    <string name="app_updater_start_notification_content">Getting download data...</string>
 
-    <string name="app_updater_progress_notification_title">版本更新</string>
-    <string name="app_updater_progress_notification_content">下载更新中…</string>
+    <string name="app_updater_progress_notification_title">version update</string>
+    <string name="app_updater_progress_notification_content">Downloading and updating...</string>
 
-    <string name="app_updater_finish_notification_title">下载完成</string>
-    <string name="app_updater_finish_notification_content">点击安装</string>
+    <string name="app_updater_finish_notification_title">Download complete</string>
+    <string name="app_updater_finish_notification_content">Click to install</string>
 
-    <string name="app_updater_error_notification_title">下载失败</string>
-    <string name="app_updater_error_notification_content">点击关闭通知</string>
-    <string name="app_updater_error_notification_content_re_download">点击重新下载</string>
+    <string name="app_updater_error_notification_title">Download failed</string>
+    <string name="app_updater_error_notification_content">Click to close the notification</string>
+    <string name="app_updater_error_notification_content_re_download">Click to re-download</string>
+    <string name="loading">Please wait…</string>
 </resources>
